--- a/SPCommonLib.csproj
+++ b/SPCommonLib.csproj
@@ -74,6 +74,7 @@
     <None Include="app.config" />
     <None Include="ERSignKey.snk" />
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
